ssh-import-id (4.4) unreleased; urgency=medium

  * setup.py:
    - drop another invalid classifier

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 Oct 2015 17:52:29 -0500

ssh-import-id (4.3-0ubuntu1) wily; urgency=medium

  * === added symlink README, setup.py, === target is uREADME.md:
    - fix setup.py classifiers
  * setup.py:
    - require 3.2 final
  * setup.py (properties changed: -x to +x):
    - make executable

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 Oct 2015 17:52:27 -0500

ssh-import-id (4.2-0ubuntu1) wily; urgency=medium

  [ Barry Warsaw and Dustin Kirkland ]
  * setup_helpers.py, setup.py:
    - ensure that pypi/pip installs require python3,
      https://github.com/cmars/ssh-import-id/issues/6

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 Oct 2015 17:44:17 -0500

ssh-import-id (4.1-0ubuntu1) vivid; urgency=medium

  * setup.py:
    - clean up some whitespace and indenting issues

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 06 Jan 2015 14:39:26 -0600

ssh-import-id (4.0-0ubuntu1) utopic; urgency=low

  [ Andrew Starr-Bochicchio ]
  * Port to python3 (LP: #1252474).

  [ Dustin Kirkland ]
  * setup.py:
    - bump to 4.0, to note the significant change to python3

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 28 Apr 2014 15:12:44 -0700

ssh-import-id (3.21-0ubuntu1) trusty; urgency=low

  * bin/ssh-import-id: LP: #1285295
    - re-authorizing existing keys should exit 0
    - update logging

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 27 Feb 2014 09:39:22 -0600

ssh-import-id (3.20-0ubuntu1) trusty; urgency=low

  * bin/ssh-import-id: LP: #1274426
    - ensure that we exit zero if any of the id's that we try to import
      affect 0 keys (ie, if we fail to do something we were asked to do)
    - however, we should continue to try to succeed, as much as possible,
      even if one of the earlier accounts failed

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 30 Jan 2014 09:22:45 +0000
